# bioturbation-model

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  bioturbation.py  docs.ipynb  environment.yml  main.py  mesocosms.py  setup.cfg  temp-plot.html
.ipynb_checkpoints/: docs-checkpoint.ipynb
examples/: calibrate.ipynb  conceptualisation.ipynb  example_data.csv  simple.ipynb
img/: conceptual-model.pptx
scratch/: main.py  mesocosms.py
src/bioturbation/: bioturbation.py  main.py  mesocosms.py  model.py  soil.py
tests/: simple.py
