[metadata]
name = bioturbation-model-samharrison7
version = 0.0.1
author = Sam Harrison
author_email = samharrison.xg@gmail.com
description = Simple model of bioturbation in a layered soil profile
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samharrison7/bioturbation-model
project_urls =
    Bug Tracker = https://github.com/samharrison7/bioturbation-model/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src